[package]
name = "z-tenant-flight"
version = "0.2.0"
edition = "2021"
description = "Duffel flight booking showcase for Trinity z-space tenants — synchronous HTTP search + book via host:interfaces/http"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
