[package]
name = "z-tenant-flight"
version = "0.4.0"
edition = "2021"
description = "Duffel flight booking showcase for Trinity z-space tenants — HTTP search (no PII) + PII-safe booking via host:interfaces/http-with-placeholders"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
